implementacao da funcao de update do servico
